--- a/odoo.conf
+++ b/odoo.conf
@@ -1,8 +1,6 @@
 [options]
-db_host = dpg-d3827tgdl3ps73aulk9g-a.internal.com
+db_host = dpg-d3827tgdl3ps73aulk9g-a.internal
 db_port = 5432
 db_user = odoo_db_8syn_user
 db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
 db_name = odoo_db_8syn
-port = 8069
-addons_path = /mnt/extra-addons
