--- a/odoo.conf
+++ b/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-db_host = dpg-d3827tgdl3ps73aulk9g-a.internal
+db_host =  dpg-d3827tgdl3ps73aulk9g-a.oregon-postgres.render.com
 db_port = 5432
 db_user = odoo_db_8syn_user
 db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
