--- a/odoo.conf
+++ b/odoo.conf
@@ -4,3 +4,4 @@ db_port = 5432
 db_user = odoo_db_8syn_user
 db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
 db_name = odoo_db_8syn
+xmlrpc_port = ${PORT}
