--- a/odoo.conf
+++ b/odoo.conf
@@ -1,7 +1,8 @@
 [options]
-db_host =  dpg-d3827tgdl3ps73aulk9g-a.oregon-postgres.render.com
-db_port = 5432
-db_user = odoo_db_8syn_user
-db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
-db_name = odoo_db_8syn
+addons_path = /mnt/extra-addons
+db_host = %(DB_HOST)s
+db_port = %(DB_PORT)s
+db_user = %(DB_USER)s
+db_password = %(DB_PASSWORD)s
+db_name = %(DB_NAME)s
 xmlrpc_port = ${PORT}
