--- a/odoo.conf
+++ b/odoo.conf
@@ -1,8 +1,8 @@
 [options]
 addons_path = /mnt/extra-addons
-db_host = %(DB_HOST)s
-db_port = %(DB_PORT)s
-db_user = %(DB_USER)s
-db_password = %(DB_PASSWORD)s
-db_name = %(DB_NAME)s
+db_host = ${DB_HOST}
+db_port = ${DB_PORT}
+db_user = ${DB_USER}
+db_password = ${DB_PASSWORD}
+db_name = ${DB_NAME}
 xmlrpc_port = ${PORT}
