--- a/odoo.conf
+++ b/odoo.conf
@@ -1,8 +1,7 @@
 [options]
 addons_path = /mnt/extra-addons
-db_host = dpg-d3827tgdl3ps73aulk9g-a.oregon-postgres.render.com
-db_port = 5432
-db_user = odoo_db_8syn_user
-db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
-db_name = odoo_db_8syn
-xmlrpc_port = 8080
+db_host = ${DB_HOST}
+db_port = ${DB_PORT}
+db_user = ${DB_USER}
+db_password = ${DB_PASSWORD}
+logfile = /var/log/odoo/odoo.log
