--- a/odoo.conf
+++ b/odoo.conf
@@ -1,6 +1,6 @@
 [options]
 addons_path = /mnt/extra-addons
-db_host = dpg-d3827tgdl3ps73aulk9g-a.oregon-postgres.render.com
+db_host = dpg-d3827tgdl3ps73aulk9g-a
 db_port = 5432
 db_user = odoo_db_8syn_user
 db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
