--- a/odoo.conf
+++ b/odoo.conf
@@ -1,9 +1,16 @@
 [options]
-addons_path = /mnt/extra-addons
-db_host = dpg-d3827tgdl3ps73aulk9g-a
+; ------------------------------
+; Odoo configuration
+; ------------------------------
+
+; Database connection
+db_host = dpg-d3827qtgdl3ps73aulk9g-a.oregon-postgres.render.com
 db_port = 5432
 db_user = odoo_db_8syn_user
 db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
 db_name = odoo_db_8syn
-admin_passwd = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
-log_level = info
+
+; Odoo settings
+addons_path = /mnt/extra-addons
+admin_passwd = superadmin123
+xmlrpc_port = 8069
