--- a/odoo.conf
+++ b/odoo.conf
@@ -1,16 +1,11 @@
 [options]
-; ------------------------------
-; Odoo configuration
-; ------------------------------
-
-; Database connection
-db_host = dpg-d3827qtdl3ps73aulk9g-a.oregon-postgres.render.com
-db_port = 5432
-db_user = odoo_db_8syn_user
-db_password = 6RGJt0JxT2BVA69HuLyML9RWwauTkvet
-db_name = odoo_db_8syn
-
-; Odoo settings
 addons_path = /mnt/extra-addons
 admin_passwd = superadmin123
+
+db_host = ${DB_HOST}
+db_port = ${DB_PORT}
+db_user = ${DB_USER}
+db_password = ${DB_PASSWORD}
+db_name = ${DB_NAME}
+
 xmlrpc_port = 8069
